fix chromium scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -87,6 +87,25 @@
 
 * {
 	box-sizing: border-box;
+	/* Works on Firefox */
+	scrollbar-width: thin;
+	scrollbar-color: $color-gray $color-dark;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+	width: 12px;
+	height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+	background: $color-dark;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: $color-gray;
+	border-radius: 20px;
+	border: 3px solid $color-dark;
 }
 
 html, body {
